--- a/index.html
+++ b/index.html
@@ -17,19 +17,23 @@
     <h1 class="" id="">Equilibrium #3429</h1>
     <p class="whitespace"> Our Equilibrium collection promotes 
  balance and calm.</p>
-    <div class="flex-display" >
-      <div class="flex">
+    <div class="main-flex" >
+      <div class="flex-size">
+        <div class="flex ">
           <img src="images/icon-ethereum.svg" alt="" srcset="">
           <p class="cyan">0.041 ETH</p>
+        </div>
       </div>
-      <div class="flex">
-          <img src="images/icon-clock.svg" alt="">
+      <div class="flex-size">
+        <div class="flex">
+          <img src="images/icon-clock.svg" alt="" class="">
           <p>3 days left</p>
+        </div>
       </div>
     </div>
     <hr>
     <div class="flex">
-      <img src="images/image-avatar.png" alt="">
+      <img src="images/image-avatar.png" alt="" class="img-border-white">
       <p>Creation of <span>Jules Wyvern </span></p>
     </div>
   </div>
