--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
 <body>
 
   <div class="card">
-    <img src="images/image-equilibrium.jpg" alt="" class="main-img">
+    <div id="main-img">
+      <img src="images/image-equilibrium.jpg" alt="" class="main-img">
+    </div>
     <h1 class="" id="">Equilibrium #3429</h1>
     <p class="whitespace"> Our Equilibrium collection promotes 
  balance and calm.</p>
